<resources>
    <string name="app_name">Digi Forecast</string>
    <string name="max_temperature">MAX</string>
    <string name="min_temperature">MIN</string>
    <string name="celsius_degree">°C</string>
    <string name="humidity">HUMIDITY</string>
    <string name="wind">WIND</string>
    <string name="degree">Degree</string>
    <string name="degree_sign">°</string>
    <string name="percent">%</string>
    <string name="kilometer_per_hour">k/h</string>
    <string name="divider">|</string>
    <string name="last_update">Last Update:</string>
    <string name="location_permission_denied_message">Location permission is required for us to show you the weather condition</string>
</resources>
